--- a/setup.cfg
+++ b/setup.cfg
@@ -3,9 +3,9 @@ name = tome
 summary = tome
 description-file =
     README.rst
-author = OpenStack
-author-email = openstack-dev@lists.openstack.org
-home-page = http://www.openstack.org/
+author = James Slagle
+author-email = james.slagle@gmail.com
+home-page = http://github.com/slagle/tome
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
@@ -22,6 +22,14 @@ classifier =
 [files]
 packages =
     tome
+
+[entry_points]
+console_scripts =
+    tome = tome.cli.shell:main
+tome.cli.commands =
+    add = tome.cli.commands:Add
+    remove = tome.cli.commands:Remove
+    exists = tome.cli.commands:Exists
 
 [build_sphinx]
 source-dir = doc/source
