--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ setenv =
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
+sitepackages = True
 
 [testenv:pep8]
 commands = flake8
