--- a/setup.cfg
+++ b/setup.cfg
@@ -27,8 +27,8 @@ packages =
 console_scripts =
     tome = tome.cli.shell:main
 tome.cli.commands =
-    add = tome.cli.commands:Add
-    remove = tome.cli.commands:Remove
+    create = tome.cli.commands:Create
+    delete = tome.cli.commands:Delete
     exists = tome.cli.commands:Exists
 
 [build_sphinx]
