--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,5 @@ usedevelop = True
 install_command = pip install -U {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = nosetests []
+commands = nosetests -s []
 sitepackages = True
